--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Fruit Merge v1.40</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
     <style>
+        /* SECTION: CSS STYLES & UI LAYOUT */
         :root { --accent: #2ecc71; --bg: #f0f0f0; }
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; margin:0; padding:0; }
         body { overflow: hidden; font-family: 'Arial Black', sans-serif; height: 100vh; width: 100vw; position: fixed; touch-action: none; background: var(--bg); }
@@ -34,7 +35,6 @@
     <h1>GAME OVER</h1><p>Score: <span id="gs">0</span> | Best: <span id="hs">0</span></p>
     <button onclick="restart()" style="margin-top:20px; padding:10px 30px; background:var(--accent); border:none; border-radius:10px; color:white;">RETRY</button>
 </div>
-
 <div class="ui top-bar">
     <div style="font-size:12px">SCORE<br><span id="cur-s" style="font-size:20px">0</span></div>
     <div id="next-box" style="width:50px; height:50px; border:2px solid #333; border-radius:50%; display:grid; place-items:center; font-size:28px; background:#fff"></div>
@@ -44,7 +44,6 @@
     <div id="p-bar" style="display:inline-flex; gap:3px; background:#fff; padding:5px; border:2px solid #333; border-radius:10px;"></div>
     <div id="wallet" style="color:var(--accent); font-size:18px; text-shadow:1px 1px #000;">$0</div>
 </div>
-
 <div class="ui bot-bar">
     <div class="pwr-btn" data-t="bomb" data-p="$50" style="background:#e67e22">💣</div>
     <div class="pwr-btn" data-t="wipe" data-p="$75" style="background:#9b59b6">🧹</div>
@@ -54,7 +53,6 @@
     <div class="pwr-btn" onclick="toggleMute()" id="m-btn" style="background:#eee">🔊</div>
     <div class="pwr-btn" onclick="toggleM('shop-mod')" style="background:#3498db; width:65px">SHOP</div>
 </div>
-
 <div id="shop-mod" class="modal">
     <div style="padding:15px; border-bottom:2px solid #eee; display:flex; justify-content:space-between"><b>SHOP ($<span id="cash">0</span>)</b><b onclick="toggleM('shop-mod')">✕</b></div>
     <div class="modal-body" id="shop-content"></div>
@@ -68,10 +66,10 @@
         <button onclick="toggleM('help-mod')" style="margin-top:20px; width:100%; padding:10px; background:#333; color:#fff; border:none; border-radius:8px">CLOSE</button>
     </div>
 </div>
-
 <canvas id="c"></canvas>
 
 <script>
+// SECTION: GAME CONFIGURATION & DATA CONSTANTS
 const M=Matter, E=M.Engine, B=M.Bodies, C=M.Composite;
 const SKINS = { Fruit:["🍒","🍓","🍇","🍊","🍎","🍐","🍑","🍍","🍈","🍉","🥥","🥝"], Animals:["🐞","🐸","🐢","🦆","🐒","🦉","🐧","🐺","🦓","🦍","🐘","🐋"], Music:["🪕","🪗","🎸","🎹","🎺","🎻","🥁","🎷","🎙️","📻","🎧","🎵"], Weather:["☁️","🌦️","⛈️","🌩️","🌨️","❄️","🌬️","💨","🌪️","🌫️","🌈","☀️"], Space:["🌑","☄️","🛰️","🚀","🛸","👾","🔭","🌌","🪐","☀️","🌀","👽"], Nature:["🌱","🌿","☘️","🍀","🍃","🍂","🍁","🍄","🌵","🌴","🌲","🌳"], Dessert:["🍬","🍪","🍩","🍫","🍮","🍦","🧁","🍰","🥧","🥞","🧇","🎂"], Shapes:["🔺","🟡","🟩","🔷","⭐","🛑","💎","🌙","🌀","💠","⬛","⚪"] };
 const WORDS = { Fruit:["JUICY!","FRESH!"], Space:["SUPERNOVA!","GALACTIC!"], Animals:["WILD!","ROAR!"], Music:["GROOVY!","BEAT!"], Weather:["STORM!","FLASH!"], Nature:["EARTHY!","BLOOM!"], Dessert:["SWEET!","YUM!"], Shapes:["SHARP!","PERFECT!"] };
@@ -80,6 +78,7 @@ const BORDERS = { Slate:"#657B83", Gold:"#DAA520", Neon:"#B026FF", Red:"#DC143C"
 const OUTLINES = { Default:"def", Rainbow:"rainbow", White:"white", Black:"black" };
 const SIZES = [18, 24, 30, 38, 46, 55, 65, 76, 88, 102, 118, 135];
 
+// SECTION: GAME STATE & CORE INITIALIZATION
 let st = { score:0, best:0, wallet:100, muted:false, eq:{sk:'Fruit', th:'Mellow', bd:'Slate', ot:'def'}, owned:['sk_Fruit', 'th_Mellow', 'bd_Slate', 'ot_def'], found:[0] };
 let engine, canvas, ctx, W, H, nextIdx=1, curIdx=0, canDrop=true, lastX=150, isDead=false, isPaused=false, activeP=null, dragP={x:0,y:0}, combo=1, lastM=0, skinC=0;
 
@@ -104,6 +103,7 @@ function init() {
     setInterval(()=>{ skinC=(skinC+1)%12; if(!isPaused) renderS(); }, 800);
 }
 
+// SECTION: PHYSICS ENGINE & OBJECT SPAWNING
 function resize() {
     W=window.innerWidth; H=window.innerHeight; canvas.width=W*devicePixelRatio; canvas.height=H*devicePixelRatio;
     ctx.setTransform(devicePixelRatio,0,0,devicePixelRatio,0,0);
@@ -122,6 +122,7 @@ function spawnF(x,y,t,isD) {
     return b;
 }
 
+// SECTION: INPUT HANDLING & POWER-UP LOGIC
 function setupIn() {
     const getX=e=>(e.touches?e.touches[0].clientX:e.clientX), getY=e=>(e.touches?e.touches[0].clientY:e.clientY);
     const move=e=>{ if(isPaused)return; if(activeP) dragP={x:getX(e), y:getY(e)}; else lastX=Math.max(40,Math.min(W-40,getX(e))); if(!e.target.closest('.modal')) e.preventDefault(); };
@@ -145,6 +146,7 @@ function releaseP(x,y) {
     if(used){ st.wallet-=price; updUI(); save(); playS(300); }
 }
 
+// SECTION: MAIN RENDER LOOP & UI DRAWING
 function loop() {
     if(!isPaused) E.update(engine, 16); ctx.clearRect(0,0,W,H); document.body.style.background=THEMES[st.eq.th];
     ctx.fillStyle=BORDERS[st.eq.bd]; ctx.fillRect(0,0,15,H); ctx.fillRect(W-15,0,15,H);
@@ -169,6 +171,7 @@ function loop() {
     requestAnimationFrame(loop);
 }
 
+// SECTION: SHOP SYSTEM & UI UPDATES
 function renderS() {
     const cont=document.getElementById('shop-content'); cont.innerHTML='';
     document.getElementById('cash').innerText=st.wallet;
@@ -196,6 +199,8 @@ function updUI(){
     const pb=document.getElementById('p-bar'); pb.innerHTML='';
     for(let i=0; i<12; i++) pb.innerHTML+=`<span style="opacity:${st.found.includes(i)?1:0.1}">${SKINS[st.eq.sk][i]}</span>`;
 }
+
+// SECTION: UTILITIES & PERSISTENCE
 function playS(f){ if(st.muted)return; const a=new AudioContext(); const o=a.createOscillator(); const g=a.createGain(); o.frequency.setValueAtTime(f,a.currentTime); o.frequency.exponentialRampToValueAtTime(10,a.currentTime+0.1); g.gain.setValueAtTime(0.05,a.currentTime); o.connect(g); g.connect(a.destination); o.start(); o.stop(a.currentTime+0.1); }
 function toggleMute(){ st.muted=!st.muted; document.getElementById('m-btn').innerText=st.muted?'🔇':'🔊'; save(); }
 function toggleF(){ if(!document.fullscreenElement) document.documentElement.requestFullscreen(); else document.exitFullscreen(); }
