--- a/index.html
+++ b/index.html
@@ -6,28 +6,29 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title>Fruit Merge v1.40</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
+    
     <style>
-        /* SECTION: CSS STYLES & UI LAYOUT */
-        :root { --accent: #2ecc71; --bg: #f0f0f0; }
-        * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; margin:0; padding:0; }
-        body { overflow: hidden; font-family: 'Arial Black', sans-serif; height: 100vh; width: 100vw; position: fixed; touch-action: none; background: var(--bg); }
-        canvas { display: block; width: 100%; height: 100%; }
-        .ui { position: absolute; z-index: 1000; pointer-events: none; width: 100%; }
-        .top-bar { top: 0; background: rgba(255,255,255,0.95); border-bottom: 3px solid #333; pointer-events: auto; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center; }
-        .bot-bar { bottom: 0; height: 90px; background: rgba(255,255,255,0.95); border-top: 3px solid #333; pointer-events: auto; display: flex; align-items: center; justify-content: space-evenly; }
-        .pwr-btn { width: 48px; height: 48px; border-radius: 12px; border: 2px solid #333; background: #fff; display: flex; align-items: center; justify-content: center; font-size: 20px; pointer-events: auto; position: relative; }
-        .pwr-btn::after { content: attr(data-p); position: absolute; bottom: -15px; font-size: 10px; color: #333; }
-        .modal { display: none; position: absolute; inset: 15px; background: white; z-index: 2000; border-radius: 20px; border: 4px solid #333; flex-direction: column; pointer-events: auto; }
-        .modal.open { display: flex; }
-        .modal-body { flex: 1; overflow-y: auto; padding: 15px; display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
-        .card { border: 2px solid #eee; border-radius: 15px; padding: 10px; text-align: center; }
-        .card.eq { border-color: var(--accent); background: #f0fff0; }
-        .swatch { width: 40px; height: 40px; border-radius: 50%; margin: 0 auto 5px; border: 2px solid #333; display: flex; align-items: center; justify-content: center; animation: bounce 2s infinite; }
-        @keyframes bounce { 0%,100%{transform:translateY(0)} 50%{transform:translateY(-5px)} }
-        #toast-layer { position: absolute; pointer-events: none; inset: 0; z-index: 1500; }
-        .floating-text { position: absolute; font-size: 24px; color: #e74c3c; text-shadow: 2px 2px #fff; animation: up-out 1s forwards; font-family: 'Impact'; }
-        @keyframes up-out { to { transform: translateY(-50px); opacity: 0; } }
-    </style>
+    :root { --accent: #2ecc71; --bg: #f0f0f0; }
+    * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; margin:0; padding:0; }
+    body { overflow: hidden; font-family: 'Arial Black', sans-serif; height: 100vh; width: 100vw; position: fixed; touch-action: none; background: var(--bg); padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left); }
+    canvas { display: block; width: 100%; height: 100%; }
+    .ui { position: absolute; z-index: 1000; pointer-events: none; width: 100%; }
+    .top-bar { top: env(safe-area-inset-top); background: rgba(255,255,255,0.95); border-bottom: 3px solid #333; pointer-events: auto; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center; }
+    .bot-bar { bottom: 0; padding-bottom: env(safe-area-inset-bottom); height: calc(90px + env(safe-area-inset-bottom)); background: rgba(255,255,255,0.95); border-top: 3px solid #333; pointer-events: auto; display: flex; align-items: center; justify-content: space-evenly; }
+    .pwr-btn { width: 48px; height: 48px; border-radius: 12px; border: 2px solid #333; background: #fff; display: flex; align-items: center; justify-content: center; font-size: 20px; pointer-events: auto; position: relative; }
+    .pwr-btn::after { content: attr(data-p); position: absolute; bottom: -15px; font-size: 10px; color: #333; }
+    .modal { display: none; position: absolute; inset: 40px 20px; background: white; z-index: 2000; border-radius: 20px; border: 4px solid #333; flex-direction: column; pointer-events: auto; }
+    .modal.open { display: flex; }
+    .modal-body { flex: 1; overflow-y: auto; padding: 15px; display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
+    .card { border: 2px solid #eee; border-radius: 15px; padding: 10px; text-align: center; }
+    .card.eq { border-color: var(--accent); background: #f0fff0; }
+    .swatch { width: 40px; height: 40px; border-radius: 50%; margin: 0 auto 5px; border: 2px solid #333; display: flex; align-items: center; justify-content: center; animation: bounce 2s infinite; }
+    @keyframes bounce { 0%,100%{transform:translateY(0)} 50%{transform:translateY(-5px)} }
+    #toast-layer { position: absolute; pointer-events: none; inset: 0; z-index: 1500; }
+    .floating-text { position: absolute; font-size: 28px; color: #e74c3c; text-shadow: 2px 2px #fff, -1px -1px 0 #000; animation: up-out 1s forwards; font-family: 'Arial Black', sans-serif; font-weight: 900; }
+    @keyframes up-out { 0% { transform: scale(0.5) rotate(-15deg); opacity: 0; } 50% { opacity: 1; transform: scale(1.2) rotate(10deg); } 100% { transform: translateY(-100px) rotate(0deg); opacity: 0; } }
+</style>
+
 </head>
 <body>
 <div id="toast-layer"></div>
