--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 <script>
 // SECTION: GAME CONFIGURATION & DATA CONSTANTS
 const M=Matter, E=M.Engine, B=M.Bodies, C=M.Composite;
-const SKINS = { Fruit:["🍒","🍓","🍇","🍊","🍎","🍐","🍑","🍍","🍈","🍉","🥥","🥝"], Animals:["🐞","🐸","🐢","🦆","🐒","🦉","🐧","🐺","🦓","🦍","🐘","🐋"], Music:["🪕","🪗","🎸","🎹","🎺","🎻","🥁","🎷","🎙️","📻","🎧","🎵"], Weather:["☁️","🌦️","⛈️","🌩️","🌨️","❄️","🌬️","💨","🌪️","🌫️","🌈","☀️"], Space:["🌑","☄️","🛰️","🚀","🛸","👾","🔭","🌌","🪐","☀️","🌀","👽"], Nature:["🌱","🌿","☘️","🍀","🍃","🍂","🍁","🍄","🌵","🌴","🌲","🌳"], Dessert:["🍬","🍪","🍩","🍫","🍮","🍦","🧁","🍰","🥧","🥞","🧇","🎂"], Shapes:["🔺","🟡","🟩","🔷","⭐","🛑","💎","🌙","🌀","💠","⬛","⚪"] };
+const SKINS = { Fruit:["🍒","🍓","🍇","🍊","🍎","🍐","🍑","🍍","🍈","🍉","🥥","🥝"], Animals:["🐞","🐸","🐢","🦆","🐒","🦉","🐧","🐺","🦓","🦍","🐘","🐋"], Music:["🪕","🪗","🎸","🎹","🎺","🎻","🥁","🎷","🎙️","📻","🎧","🎵"], Weather:["☁️","🌦️","⛈️","🌩️","🌨️","❄️","🌬️","💨","🌪️","🌫️","🌈","☀️"], Space:["🌑","☄️","🛰️","🚀","🛸","👾","🔭","🌌","🪐","☀️","🌀","👽"], Nature:["🌱","🌿","☘️","🍄","🍃","🍂","🍁","🌵","🌴","🌲","🌳","🌻"], Dessert:["🍬","🍪","🍩","🍫","🍮","🍦","🧁","🍰","🥧","🥞","🧇","🎂"], Shapes:["🔺","🟡","🟩","🔷","⭐","🛑","💎","🌙","🌀","💠","⬛","⚪"] };
+const TIER_COLORS = ["#5dade2","#48c9b0","#52be80","#f4d03f","#eb984e","#e74c3c","#af7ac5","#5499c7","#45b39d","#58d68d","#f5b041","#f1c40f"];
 const WORDS = { Fruit:["JUICY!","FRESH!"], Space:["SUPERNOVA!","GALACTIC!"], Animals:["WILD!","ROAR!"], Music:["GROOVY!","BEAT!"], Weather:["STORM!","FLASH!"], Nature:["EARTHY!","BLOOM!"], Dessert:["SWEET!","YUM!"], Shapes:["SHARP!","PERFECT!"] };
 const THEMES = { Mellow:"#FDF6E3", Midnight:"#1a1b26", Matcha:"#E8F5E9", Lavender:"#F3E5F5", Sky:"#E1F5FE", Rose:"#FFF1F0" };
 const BORDERS = { Slate:"#657B83", Gold:"#DAA520", Neon:"#B026FF", Red:"#DC143C", Black:"#000000", Silver:"#C0C0C0" };
