--- a/index.html
+++ b/index.html
@@ -59,14 +59,17 @@
     <div class="modal-body" id="shop-content"></div>
 </div>
 <div id="help-mod" class="modal">
-    <div style="padding:15px; border-bottom:2px solid #eee;"><b>HELP & INFO</b></div>
-    <div class="modal-body" style="display:block; line-height:1.4">
-        <p><b>Vibe-Logic:</b> Each skin has different bounciness! Hard skins (Space) drop heavy; Soft skins (Animals) bounce more.</p>
-        <p><b>Combos:</b> Merge fast to trigger bonuses!</p>
-        <p><b>Build:</b> v1.40 Obsidian</p>
-        <button onclick="toggleM('help-mod')" style="margin-top:20px; width:100%; padding:10px; background:#333; color:#fff; border:none; border-radius:8px">CLOSE</button>
+    <div style="padding:15px; border-bottom:2px solid #eee;"><b>HOW TO PLAY</b></div>
+    <div class="modal-body" style="display:block; line-height:1.4; font-family: sans-serif; font-size: 14px;">
+        <p><b>Merge:</b> Drop items to merge identical tiers. Discover all 12!</p><br>
+        <p><b>Vibe-Logic:</b> Material physics change by skin. Space/Nature are heavy (low bounce); Animals/Desserts are bouncy!</p><br>
+        <p><b>Power-ups:</b><br>💣 <b>Bomb:</b> Blast nearby items.<br>🧹 <b>Wipe:</b> Delete all items of one tier.<br>🪄 <b>Evo:</b> Level up a specific item.</p><br>
+        <p><b>The Shop:</b> Spend $ earned from merges to buy Skins, Outlines, Themes, and Borders.</p><br>
+        <p><b>Pro Tip:</b> Tap the Browser Share button and select <b>'Add to Home Screen'</b> for a better full-screen experience!</p>
+        <button onclick="toggleM('help-mod')" style="margin-top:20px; width:100%; padding:12px; background:#333; color:#fff; border:none; border-radius:8px">LET'S GO</button>
     </div>
 </div>
+
 <canvas id="c"></canvas>
 
 <script>
