--- a/index.html
+++ b/index.html
@@ -168,14 +168,30 @@ function loop() {
         if(b.sq>1) b.sq -= 0.05;
         ctx.scale(b.sq||1, b.sq||1);
         ctx.fillStyle="#fff"; ctx.beginPath(); ctx.arc(0,0,b.circleRadius,0,Math.PI*2); ctx.fill();
+        
+        // Tier-colored hitboxes and subtle glow
         ctx.lineWidth=4; 
-        if(activeP && M.Vector.magnitude(M.Vector.sub(b.position, dragP)) < (activeP==='bomb'?80:25)) { ctx.strokeStyle="#fff"; ctx.shadowBlur=10; ctx.shadowColor="#fff"; }
-        else ctx.strokeStyle=(st.eq.ot==='rainbow')?`hsl(${now/10%360},100%,50%)`:st.eq.ot==='white'?'#fff':st.eq.ot==='black'?'#000':'#0002';
-        ctx.stroke(); ctx.font=`${b.circleRadius*1.2}px serif`; ctx.textAlign="center"; ctx.textBaseline="middle";
+        const dist = activeP ? M.Vector.magnitude(M.Vector.sub(b.position, dragP)) : 999;
+        const inPwr = activeP && dist < (activeP==='bomb'?80:25);
+
+        if(inPwr) {
+            const pulse = 0.5 + Math.sin(now/200)*0.5;
+            ctx.strokeStyle = `rgba(255, 215, 0, ${pulse})`; // Pulsing Gold
+            ctx.shadowBlur = 15; ctx.shadowColor = "gold";
+        } else {
+            ctx.strokeStyle = TIER_COLORS[b.plugin.t] || "#fff";
+            ctx.shadowBlur = 5; ctx.shadowColor = ctx.strokeStyle;
+        }
+        
+        ctx.stroke(); 
+        ctx.font=`${b.circleRadius*1.2}px serif`; ctx.textAlign="center"; ctx.textBaseline="middle";
         ctx.fillText(SKINS[st.eq.sk][b.plugin.t], 0, 0); ctx.restore(); ctx.shadowBlur=0;
     });
     if(canDrop && !activeP && !isDead){ ctx.globalAlpha=0.4; ctx.font="40px serif"; ctx.textAlign="center"; ctx.fillText(SKINS[st.eq.sk][curIdx], lastX, 145); ctx.globalAlpha=1; }
-    if(activeP) { ctx.beginPath(); ctx.strokeStyle="#333"; ctx.setLineDash([5,5]); ctx.arc(dragP.x, dragP.y, activeP==='bomb'?80:25, 0, Math.PI*2); ctx.stroke(); }
+    if(activeP) { 
+        ctx.beginPath(); ctx.strokeStyle="gold"; ctx.lineWidth=2; ctx.setLineDash([10,5]); 
+        ctx.arc(dragP.x, dragP.y, activeP==='bomb'?80:25, 0, Math.PI*2); ctx.stroke(); 
+    }
     if(isDead){ document.getElementById('game-over').style.display='flex'; document.getElementById('gs').innerText=st.score; document.getElementById('hs').innerText=st.best; }
     requestAnimationFrame(loop);
 }
