--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
     <style>
         /* SECTION: CSS STYLES & UI LAYOUT */
         :root { --accent: #2ecc71; --bg: #f0f0f0; }
+        :root { --accent: #2ecc71; --bg: #f0f0f0; }
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; margin:0; padding:0; }
-        body { overflow: hidden; font-family: 'Arial Black', sans-serif; height: 100vh; width: 100vw; position: fixed; touch-action: none; background: var(--bg); }
+        body { overflow: hidden; font-family: 'Arial Black', sans-serif; height: 100vh; width: 100vw; position: fixed; touch-action: none; background: var(--bg); padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left); }
         canvas { display: block; width: 100%; height: 100%; }
         .ui { position: absolute; z-index: 1000; pointer-events: none; width: 100%; }
-        .top-bar { top: 0; background: rgba(255,255,255,0.95); border-bottom: 3px solid #333; pointer-events: auto; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center; }
-        .bot-bar { bottom: 0; height: 90px; background: rgba(255,255,255,0.95); border-top: 3px solid #333; pointer-events: auto; display: flex; align-items: center; justify-content: space-evenly; }
+        .top-bar { top: env(safe-area-inset-top); background: rgba(255,255,255,0.95); border-bottom: 3px solid #333; pointer-events: auto; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center; }
+        .bot-bar { bottom: 0; height: calc(90px + env(safe-area-inset-bottom)); background: rgba(255,255,255,0.95); border-top: 3px solid #333; pointer-events: auto; display: flex; align-items: center; justify-content: space-evenly; padding-bottom: env(safe-area-inset-bottom); }
         .pwr-btn { width: 48px; height: 48px; border-radius: 12px; border: 2px solid #333; background: #fff; display: flex; align-items: center; justify-content: center; font-size: 20px; pointer-events: auto; position: relative; }
         .pwr-btn::after { content: attr(data-p); position: absolute; bottom: -15px; font-size: 10px; color: #333; }
-        .modal { display: none; position: absolute; inset: 15px; background: white; z-index: 2000; border-radius: 20px; border: 4px solid #333; flex-direction: column; pointer-events: auto; }
+        .modal { display: none; position: absolute; inset: 40px 20px; background: white; z-index: 2000; border-radius: 20px; border: 4px solid #333; flex-direction: column; pointer-events: auto; }
         .modal.open { display: flex; }
         .modal-body { flex: 1; overflow-y: auto; padding: 15px; display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
         .card { border: 2px solid #eee; border-radius: 15px; padding: 10px; text-align: center; }
@@ -25,8 +26,8 @@
         .swatch { width: 40px; height: 40px; border-radius: 50%; margin: 0 auto 5px; border: 2px solid #333; display: flex; align-items: center; justify-content: center; animation: bounce 2s infinite; }
         @keyframes bounce { 0%,100%{transform:translateY(0)} 50%{transform:translateY(-5px)} }
         #toast-layer { position: absolute; pointer-events: none; inset: 0; z-index: 1500; }
-        .floating-text { position: absolute; font-size: 24px; color: #e74c3c; text-shadow: 2px 2px #fff; animation: up-out 1s forwards; font-family: 'Impact'; }
-        @keyframes up-out { to { transform: translateY(-50px); opacity: 0; } }
+        .floating-text { position: absolute; font-size: 32px; color: #e74c3c; text-shadow: 3px 3px 0px #fff; animation: up-out 1s forwards; font-family: 'Arial Black'; font-weight: 900; }
+        @keyframes up-out { 0% { transform: scale(0.5) rotate(-10deg); opacity: 0; } 50% { opacity: 1; transform: scale(1.2) rotate(5deg); } 100% { transform: translateY(-100px) scale(1) rotate(0deg); opacity: 0; } }
     </style>
 </head>
 <body>
@@ -58,20 +59,23 @@
     <div class="modal-body" id="shop-content"></div>
 </div>
 <div id="help-mod" class="modal">
-    <div style="padding:15px; border-bottom:2px solid #eee;"><b>HELP & INFO</b></div>
+    <div style="padding:15px; border-bottom:2px solid #eee; display:flex; justify-content:space-between"><b>GAME GUIDE</b><b onclick="toggleM('help-mod')">✕</b></div>
     <div class="modal-body" style="display:block; line-height:1.4">
-        <p><b>Vibe-Logic:</b> Each skin has different bounciness! Hard skins (Space) drop heavy; Soft skins (Animals) bounce more.</p>
-        <p><b>Combos:</b> Merge fast to trigger bonuses!</p>
-        <p><b>Build:</b> v1.40 Obsidian</p>
-        <button onclick="toggleM('help-mod')" style="margin-top:20px; width:100%; padding:10px; background:#333; color:#fff; border:none; border-radius:8px">CLOSE</button>
+        <p><b>Physics:</b> Hard skins (Space/Nature) are heavy; Soft skins (Animals/Dessert) bounce more.</p><br>
+        <p><b>Power-ups:</b> 💣 Bomb (Clear Area), 🧹 Wipe (Delete all of one type), 🪄 Evo (Upgrade target).</p><br>
+        <p><b>The Store:</b> Earn money by merging! High tiers = High rewards. Buy new skins, borders, and themes.</p><br>
+        <p><b>Home Screen:</b> On iPhone, tap the Share icon then 'Add to Home Screen' for a full-screen app experience!</p>
+        <button onclick="toggleM('help-mod')" style="margin-top:20px; width:100%; padding:15px; background:#333; color:#fff; border:none; border-radius:8px">LET'S PLAY</button>
     </div>
+</div>
 </div>
 <canvas id="c"></canvas>
 
 <script>
 // SECTION: GAME CONFIGURATION & DATA CONSTANTS
 const M=Matter, E=M.Engine, B=M.Bodies, C=M.Composite;
-const SKINS = { Fruit:["🍒","🍓","🍇","🍊","🍎","🍐","🍑","🍍","🍈","🍉","🥥","🥝"], Animals:["🐞","🐸","🐢","🦆","🐒","🦉","🐧","🐺","🦓","🦍","🐘","🐋"], Music:["🪕","🪗","🎸","🎹","🎺","🎻","🥁","🎷","🎙️","📻","🎧","🎵"], Weather:["☁️","🌦️","⛈️","🌩️","🌨️","❄️","🌬️","💨","🌪️","🌫️","🌈","☀️"], Space:["🌑","☄️","🛰️","🚀","🛸","👾","🔭","🌌","🪐","☀️","🌀","👽"], Nature:["🌱","🌿","☘️","🍀","🍃","🍂","🍁","🍄","🌵","🌴","🌲","🌳"], Dessert:["🍬","🍪","🍩","🍫","🍮","🍦","🧁","🍰","🥧","🥞","🧇","🎂"], Shapes:["🔺","🟡","🟩","🔷","⭐","🛑","💎","🌙","🌀","💠","⬛","⚪"] };
+const SKINS = { Fruit:["🍒","🍓","🍇","🍊","🍎","🍐","🍑","🍍","🍈","🍉","🥥","🥝"], Animals:["🐞","🐸","🐢","🦆","🐒","🦉","🐧","🐺","🦓","🦍","🐘","🐋"], Music:["🪕","🪗","🎸","🎹","🎺","🎻","🥁","🎷","🎙️","📻","🎧","🎵"], Weather:["☁️","🌦️","⛈️","🌩️","🌨️","❄️","🌬️","💨","🌪️","🌫️","🌈","☀️"], Space:["🌑","☄️","🛰️","🚀","🛸","👾","伸縮","🌌","🪐","☀️","🌀","👽"], Nature:["🌱","🌿","☘️","🍄","🍃","🍂","🍁","🌵","🌴","🌲","🌳","🌻"], Dessert:["🍬","🍪","🍩","🍫","🍮","🍦","🧁","🍰","🥧","🥞","🧇","🎂"], Shapes:["🔺","🟡","🟩","🔷","⭐","🛑","💎","🌙","🌀","💠","⬛","⚪"] };
+const T_COLORS = ["#5dade2", "#48c9b0", "#52be80", "#f4d03f", "#eb984e", "#e74c3c", "#af7ac5", "#5499c7", "#45b39d", "#58d68d", "#f5b041", "#f39c12"];
 const WORDS = { Fruit:["JUICY!","FRESH!"], Space:["SUPERNOVA!","GALACTIC!"], Animals:["WILD!","ROAR!"], Music:["GROOVY!","BEAT!"], Weather:["STORM!","FLASH!"], Nature:["EARTHY!","BLOOM!"], Dessert:["SWEET!","YUM!"], Shapes:["SHARP!","PERFECT!"] };
 const THEMES = { Mellow:"#FDF6E3", Midnight:"#1a1b26", Matcha:"#E8F5E9", Lavender:"#F3E5F5", Sky:"#E1F5FE", Rose:"#FFF1F0" };
 const BORDERS = { Slate:"#657B83", Gold:"#DAA520", Neon:"#B026FF", Red:"#DC143C", Black:"#000000", Silver:"#C0C0C0" };
@@ -156,17 +160,20 @@ function loop() {
         if(!b.plugin) return;
         if(b.position.y-b.circleRadius<165 && b.speed<0.2){ if(!b.tm) b.tm=now; if(now-b.tm>2000) isDead=true; } else b.tm=null;
         ctx.save(); ctx.translate(b.position.x, b.position.y); ctx.rotate(b.angle);
-        if(b.sq>1) b.sq -= 0.05;
-        ctx.scale(b.sq||1, b.sq||1);
+        if(b.sq>1) b.sq -= 0.05; ctx.scale(b.sq||1, b.sq||1);
         ctx.fillStyle="#fff"; ctx.beginPath(); ctx.arc(0,0,b.circleRadius,0,Math.PI*2); ctx.fill();
         ctx.lineWidth=4; 
-        if(activeP && M.Vector.magnitude(M.Vector.sub(b.position, dragP)) < (activeP==='bomb'?80:25)) { ctx.strokeStyle="#fff"; ctx.shadowBlur=10; ctx.shadowColor="#fff"; }
-        else ctx.strokeStyle=(st.eq.ot==='rainbow')?`hsl(${now/10%360},100%,50%)`:st.eq.ot==='white'?'#fff':st.eq.ot==='black'?'#000':'#0002';
+        let dist = M.Vector.magnitude(M.Vector.sub(b.position, dragP));
+        if(activeP && dist < (activeP==='bomb'?80:25)) {
+            ctx.strokeStyle="#ffd700"; ctx.shadowBlur=15 + Math.sin(now/200)*5; ctx.shadowColor="#ffd700";
+        } else {
+            ctx.strokeStyle = T_COLORS[b.plugin.t]; ctx.shadowBlur=5; ctx.shadowColor=T_COLORS[b.plugin.t];
+        }
         ctx.stroke(); ctx.font=`${b.circleRadius*1.2}px serif`; ctx.textAlign="center"; ctx.textBaseline="middle";
         ctx.fillText(SKINS[st.eq.sk][b.plugin.t], 0, 0); ctx.restore(); ctx.shadowBlur=0;
     });
     if(canDrop && !activeP && !isDead){ ctx.globalAlpha=0.4; ctx.font="40px serif"; ctx.textAlign="center"; ctx.fillText(SKINS[st.eq.sk][curIdx], lastX, 145); ctx.globalAlpha=1; }
-    if(activeP) { ctx.beginPath(); ctx.strokeStyle="#333"; ctx.setLineDash([5,5]); ctx.arc(dragP.x, dragP.y, activeP==='bomb'?80:25, 0, Math.PI*2); ctx.stroke(); }
+    if(activeP) { ctx.beginPath(); ctx.strokeStyle="#ffd700"; ctx.lineWidth=3; ctx.setLineDash([2,2]); ctx.arc(dragP.x, dragP.y, activeP==='bomb'?80:25, 0, Math.PI*2); ctx.stroke(); }
     if(isDead){ document.getElementById('game-over').style.display='flex'; document.getElementById('gs').innerText=st.score; document.getElementById('hs').innerText=st.best; }
     requestAnimationFrame(loop);
 }
@@ -175,7 +182,7 @@ function loop() {
 function renderS() {
     const cont=document.getElementById('shop-content'); cont.innerHTML='';
     document.getElementById('cash').innerText=st.wallet;
-    const cats=[{n:'Outlines',k:'ot',d:OUTLINES,c:2000},{n:'Skins',k:'sk',d:SKINS,c:1500},{n:'Themes',k:'th',d:THEMES,c:750},{n:'Borders',k:'bd',d:BORDERS,c:500}];
+    const cats=[{n:'Skins',k:'sk',d:SKINS,c:1500},{n:'Outlines',k:'ot',d:OUTLINES,c:2000},{n:'Themes',k:'th',d:THEMES,c:750},{n:'Borders',k:'bd',d:BORDERS,c:500}];
     cats.forEach(cat=>{
         Object.keys(cat.d).forEach(k=>{
             const id=cat.k+'_'+k, val=(cat.k==='ot'?cat.d[k]:k), isE=st.eq[cat.k]===val, isO=st.owned.includes(id);
