--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="theme-color" content="#000000">
     <title>Suika Fusion | Physics Merge</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script type="text/babel" data-type="module" src="./index.js"></script>
+    
     <style>
         body {
             margin: 0;
